--- a/src/03_harjoitus_3.Rmd
+++ b/src/03_harjoitus_3.Rmd
@@ -1,16 +1,19 @@
 # Harjoitus 3: Paikkatietoaineiston visualisointi
 
-#### Harjoituksen sisältö
+## Harjoituksen sisältö
+
 Harjoituksessa tehdään visualisoinnit sekä vektori- että rasteriaineistosta.
 
-#### Harjoituksen tavoite
+## Harjoituksen tavoite
+
 Koulutettava oppii eri aineistotyyppien visualisointitapoja.
 
+## Valmistautuminen
 
-### Valmistautuminen
 Käynnistä QGIS-ohjelmisto. Avaa uusi QGIS-projekti ja tallenna se nimellä (**Projekti → Tallenna nimellä…**) “**QGIS_harjoitus_3**”.
 
-### Vektoriaineistojen visualisointi
+## Vektoriaineistojen visualisointi
+
 Aloita tutkimalla edellisessä harjoituksessa avattua tiestötasoa. Jos teit uuden QGIS-projektitiedoston, lisää taso painamalla **Lisää vektoritaso -painiketta** ja selaamalla tiedostoon **.../kurssihakemisto/MML/YK_1M/TieViiva.shp**. 
 Paina hiiren oikealla painikkeella tason nimeä (TieViiva) tasoluettelossa. Valitse valikosta **Ominaisuudet**:
 
@@ -43,7 +46,8 @@ Saattaa olla, että aineistotasot peittävät toisensa vaikka siten, että monik
 
 Voit myös piilottaa tai näyttää tasoja painamalla tason nimen vasemmalla puolella olevaa ruutua.
 
-### Monikulmioaineiston edistynyt visualisointi
+## Monikulmioaineiston edistynyt visualisointi
+
 Lisää QGIS-projektiin uusi paikkatietoaineisto: käytämme tässä harjoituksessa Suomen ympäristökeskuksen Natura2000-aluetietoaineistoa. Lisää kurssihakemistosta vektoriaineisto: **.../kurssihakemisto/SYKE/Natura2000/NaturaKohde_ma.shp-tiedosto** QGIS-projektiin.
 
 Ensimmäiseksi muutamme vektoriaineiston väriä. Avaa tason **Properties → Kuvaustekniikka** ja klikkaa **Väri-kohdassa** olevaa väripalkkia. Valitse haluamasi väri vektoriaineistolle. Huomaa, että voit määritellä värit arvo **HSV-** (Hue, Saturation, Value) tai **RGB-arvoilla** (Red, Green, Blue). **Peittävyys-arvolla** säädät värin läpinäkyvyyttä. Kokeile myös **Värikarttaa**, **Väripyörää** ja **Liukuväri** (välilehdet).
@@ -60,7 +64,8 @@ Avaa uudelleen tason **Properties-ikkuna**. **Kuvaustekniikka-asetuksista**, val
 Sen jälkeen valitse reunaviiva katkoviivaksi kohdasta **Piirron tyyli**. Viivan paksuudeksi voit määritellä 0,8 millimetriä.
 Lopuksi voit vielä määritellä **Tason renderöinti -kohdasta** (valikko aukeaa pientä nuolta klikkaamalla) **Peittävyys-kohtaan** arvoksi 70%.
 
-### Rasteriaineistojen visualisointi
+## Rasteriaineistojen visualisointi
+
 Tutustutaan nyt rasteriaineistoihin. Avaa uusi, tyhjä QGIS-projekti ja lisää uusi aineisto napauttamalla **Lisää** rasteritaso –pikakuvaketta vasemmasta sivupaneelista:
 
 ![](img/harjoitus_3/image3.png)
