--- a/src/02_harjoitus_2.Rmd
+++ b/src/02_harjoitus_2.Rmd
@@ -1,19 +1,17 @@
 # Harjoitus 2: Paikkatietoaineistot ja -palvelut
 
-#### Harjoituksen sisältö
+## Harjoituksen sisältö
 Harjoituksessa lisätään erilaisia paikkatietoaineistoja ja -palveluita QGIS-ohjelmistoon.
 
-#### Harjoituksen tavoite
+## Harjoituksen tavoite
 Koulutettava oppii lisäämään erilaisia paikkatietoaineistoja ja -palveluja QGIS-projektiin.
 
-
-### Valmistautuminen
+## Valmistautuminen
 Avaa edellisen harjoituksen QGIS-projekti ja tallenna se nimellä (**Projekti → Tallenna nimellä…**) “**QGIS_harjoitus_2**”.
 
 > Psst! Muista tallentaa QGIS-projekti säännöllisesti harjoituksen etenemisen yhteydessä.
 
-
-### WMS-palvelun lisääminen
+## WMS-palvelun lisääminen
 Seuraavaksi lisäämme WMS (Web Map Service) -palveluiden avulla muutaman aineiston projektiin. Valitse WMS-palveluiden lisäystyökalu Tietolähteiden hallinta -ikkunan välilehdeltä.
 
 ![](img/harjoitus_2/image6.png)
@@ -44,7 +42,7 @@ Listaamme myös alle muutaman WMS-palvelun URL-osoitteen:
 **Yhdistä-painikkeen** yläpuolisesta alasvetovalikosta voit valita haluamasi yhteyden ja ladata sieltä haluamasi tasot. Valitse siis ensin palvelu alasvetovalikosta ja paina sitten **Yhdistä**. 
 Selaa aineistoja ja lataa vielä pari paikkatietoaineistoa eri palveluista. Voit valita aineistoja oman kiinnostuksesi mukaan. Kun olet löytänyt haluamasi aineiston, valitse se (voit valita useita kerrallaan) ja paina **Lisää**, niin aineisto latautuu ja tulee käyttöön QGISissä. 
 
-### WFS-palvelun lisääminen
+## WFS-palvelun lisääminen
 Seuraavaksi lisäämme QGISiin WFS (Web Feature Service) -palveluja käyttöömme.  Muistamme luento-osuudesta, että WFS-palvelu mahdollistaa itse paikkatietokohteiden kyselyn ja lataamisen vektorimuodossa asiakasohjelmaan (eli tapauksessamme QGISiin). Valitse WFS-palveluiden lisäystyökalu seuraavasta pikakuvakkeesta:
 
 ![](img/harjoitus_2/image1.png)
@@ -74,7 +72,8 @@ Nyt kun sinulla on enemmän tasoja tasoluettelossa, voit ryhmittää tasoja, jot
 
 Yllä olevassa kuvassa näkyy vain yksi taso, mutta sinulla on varmasti jo useampi taso luettelossasi. Tee esimerkiksi omat ryhmät WFS- ja WMS-tasoille.
 
-### Lisätehtävä: WFS-rajapintapalvelun kysely ja suodatus SQL-lausekkeella
+## Lisätehtävä: WFS-rajapintapalvelun kysely ja suodatus SQL-lausekkeella
+
 Voit myös kysellä ja filtteröidä rajapintapalveluita QGISin SQL-lauseke-toiminnolla. Toiminto löytyy samasta ikkunasta, josta WFS-tasoja voidaan lisätä kunkin palveluyhteyden osalta. Seuraavassa animaatiossa ladataan Tilastokeskuksen ylläpitämästä paikkatietopalvelusta vain vakavuuden “2” liikenneonnettomuudet vuodelta 2015 QGISiin. 
 Datan lataamiseksi tuotamme SQL-kyselyn, joka etsii '2'-tiedon meillä jo tiedossa olevasta sarakkeesta. Avaamme ensin **SQL-kyselyikkunan** ja muodostamme kyselyn:
 
