--- a/src/02_harjoitus_2.Rmd
+++ b/src/02_harjoitus_2.Rmd
@@ -9,10 +9,12 @@ Koulutettava oppii lisäämään erilaisia paikkatietoaineistoja ja -palveluja Q
 ## Valmistautuminen
 Avaa edellisen harjoituksen QGIS-projekti ja tallenna se nimellä (**Projekti → Tallenna nimellä…**) “**QGIS_harjoitus_2**”.
 
-> Psst! Muista tallentaa QGIS-projekti säännöllisesti harjoituksen etenemisen yhteydessä.
+:::{.hint-box}
+**Psst! Muista tallentaa QGIS-projekti säännöllisesti harjoituksen etenemisen yhteydessä.** 
+:::
 
 ## WMS-palvelun lisääminen
-Seuraavaksi lisäämme WMS (Web Map Service) -palveluiden avulla muutaman aineiston projektiin. Valitse WMS-palveluiden lisäystyökalu Tietolähteiden hallinta -ikkunan välilehdeltä.
+Seuraavaksi lisäämme WMS (Web Map Service) -palveluiden avulla muutaman aineiston projektiin. Valitse WMS-palveluiden lisäystyökalu **Tietolähteiden hallinta** -ikkunan välilehdeltä.
 
 ![](img/harjoitus_2/image6.png)
 
@@ -28,42 +30,35 @@ http://kartta.hel.fi/ws/geoserver/avoindata/wms
 
 ![](img/harjoitus_2/image4.png)
 
-Palvelun määrityksen jälkeen paina OK. Paina vielä **Yhdistä**. Näin otamme yhteyden WMS-palveluun ja saamme alle listan palvelusta saatavilla olevista karttatasoista. Valitse Ajantasa_asemakaava tai haluamasi muu karttataso ja paina Lisää. Huomaa, että voit joutua odottamaan hetken, kun karttatasoa ladataan palvelimelta.
+Palvelun määrityksen jälkeen paina OK. Paina vielä **Yhdistä**. Näin otamme yhteyden WMS-palveluun ja saamme alle listan palvelusta saatavilla olevista karttatasoista. Valitse **Ajantasa_asemakaava** tai haluamasi muu karttataso ja paina **Lisää**. Huomaa, että voit joutua odottamaan hetken, kun karttatasoa ladataan palvelimelta.
 
-![](img/harjoitus_2/image3.png)
+![](img/harjoitus_2/image3.png){width=70%}
 
 Luo nyt muutama WMS-palveluyhteys lisää. Voit hakea ja kopioida suoraan niin WMS- kuin WFS-palveluiden URL-osoitteita Gispon ylläpitämässä vapaasti käytettävästä rajapintaluettelosta seuraavan osoitteen takaa (https://goo.gl/g6Frmg tai https://gispohelp.zendesk.com/hc/fi/articles/208159815). 
 Listaamme myös alle muutaman WMS-palvelun URL-osoitteen:
 
-- http://opaskartta.turku.fi/TeklaOgcWeb/WMS.ashx 
-- http://tiles.kartat.kapsi.fi/peruskartta? 
-- http://paikkatieto.ymparisto.fi/ArcGIS/services/INSPIRE/SYKE_Maanpeite/MapServer/WMSServer
+* http://opaskartta.turku.fi/TeklaOgcWeb/WMS.ashx 
+* http://tiles.kartat.kapsi.fi/peruskartta? 
+* http://paikkatieto.ymparisto.fi/ArcGIS/services/INSPIRE/SYKE_Maanpeite/MapServer/WMSServer
 
 **Yhdistä-painikkeen** yläpuolisesta alasvetovalikosta voit valita haluamasi yhteyden ja ladata sieltä haluamasi tasot. Valitse siis ensin palvelu alasvetovalikosta ja paina sitten **Yhdistä**. 
 Selaa aineistoja ja lataa vielä pari paikkatietoaineistoa eri palveluista. Voit valita aineistoja oman kiinnostuksesi mukaan. Kun olet löytänyt haluamasi aineiston, valitse se (voit valita useita kerrallaan) ja paina **Lisää**, niin aineisto latautuu ja tulee käyttöön QGISissä. 
 
 ## WFS-palvelun lisääminen
-Seuraavaksi lisäämme QGISiin WFS (Web Feature Service) -palveluja käyttöömme.  Muistamme luento-osuudesta, että WFS-palvelu mahdollistaa itse paikkatietokohteiden kyselyn ja lataamisen vektorimuodossa asiakasohjelmaan (eli tapauksessamme QGISiin). Valitse WFS-palveluiden lisäystyökalu seuraavasta pikakuvakkeesta:
-
-![](img/harjoitus_2/image1.png)
+Seuraavaksi lisäämme QGISiin WFS (Web Feature Service) -palveluja käyttöömme.  Muistamme luento-osuudesta, että WFS-palvelu mahdollistaa itse paikkatietokohteiden kyselyn ja lataamisen vektorimuodossa asiakasohjelmaan (eli tapauksessamme QGISiin). Valitse WFS-palveluiden lisäystyökalu seuraavasta pikakuvakkeesta: ![](img/harjoitus_2/image1.png)
 
 WFS-palvelujen yhdistäminen toimii samalla logiikalla kuin edellä määritellyt WMS-palvelut.
 
 Lisää taas muutama WFS-palvelu ja nimeä ne haluamallasi tavalla. Jos et vielä avannut mainittua Gispon ylläpitämää WMS- ja WFS-rajapintojen listaa verkosta, avaa se nyt ja hae sieltä haluamasi WFS-palvelun URL tai lisää seuraavasta listasta WFS-palveluita:
 
-- http://geoserver.hel.fi/geoserver/hkr/ows/ 
-- http://geoserver.hel.fi/geoserver/wfs?
-- http://lipas.cc.jyu.fi/geoserver/lipas/ows?
-- http://geo.stat.fi/geoserver/tilastointialueet/wfs?version=1.0.0
+* http://geoserver.hel.fi/geoserver/hkr/ows/ 
+* http://geoserver.hel.fi/geoserver/wfs?
+* http://lipas.cc.jyu.fi/geoserver/lipas/ows?
+* http://geo.stat.fi/geoserver/tilastointialueet/wfs?version=1.0.0
 
 Jos haluat käyttää tiedossasi olevaa suljettua (salasanaa vaativaa) palvelua, niin lisää käyttäjätunnus ja salasana palveluyhteyden luomisen aikana. Käyttäjätunnuksia kysytään automaattisesti, jos valitut karttatasot niin on määritetty.
-Kun olet luonut muutaman WFS-palveluyhteyden, voit ottaa niihin yhteyden samalla tavalla kuin WMS-palveluiden yhteydessä. Valitse taas oman kiinnostuksen mukaan aineistoja lisättäväksi QGISiin.
+Kun olet luonut muutaman WFS-palveluyhteyden, voit ottaa niihin yhteyden samalla tavalla kuin WMS-palveluiden yhteydessä. Valitse taas oman kiinnostuksesi mukaan aineistoja lisättäväksi QGISiin.
 Kuten sanottu, huomataan, että tällä kertaa aineistot ovat vektoriaineistomuodossa. Tutki niiden geometrioita ja ominaisuustietoja QGISissa. Kokeile valita muutamia kohteita ja tallentaa ne paikallisesti kurssihakemistoosi.
-Lisätään Tilastokeskuksen tieliikenteen **WFS-rajapinnasta** http://geo.stat.fi/geoserver/tieliikenne/wfs vektoritaso **Tieliikenneonnettomuudet 2017**. 
-
-Jos haluat käyttää tiedossasi olevaa suljettua (salasanaa vaativaa) palvelua, niin lisää käyttäjätunnus ja salasana palveluyhteyden luomisen aikana. Käyttäjätunnuksia kysytään automaattisesti, jos valitut karttatasot niin on määritetty.
-
-![](img/harjoitus_2/image5.png)
 
 Kun olet luonut muutaman WFS-palveluyhteyden, voit ottaa niihin yhteyden samalla tavalla kuin WMS-palveluiden yhteydessä. Valitse taas oman kiinnostuksen mukaan aineistoja lisättäväksi QGISiin. 
 Nyt kun sinulla on enemmän tasoja tasoluettelossa, voit ryhmittää tasoja, jotta sinun on helpompi hallita tasoja yhdessä. Hyödynnä myös muita tasoluettelon pikanäppäimiä tasoluettelon yläpuolelta:
@@ -74,7 +69,12 @@ Yllä olevassa kuvassa näkyy vain yksi taso, mutta sinulla on varmasti jo useam
 
 ## Lisätehtävä: WFS-rajapintapalvelun kysely ja suodatus SQL-lausekkeella
 
-Voit myös kysellä ja filtteröidä rajapintapalveluita QGISin SQL-lauseke-toiminnolla. Toiminto löytyy samasta ikkunasta, josta WFS-tasoja voidaan lisätä kunkin palveluyhteyden osalta. Seuraavassa animaatiossa ladataan Tilastokeskuksen ylläpitämästä paikkatietopalvelusta vain vakavuuden “2” liikenneonnettomuudet vuodelta 2015 QGISiin. 
+Voit myös kysellä ja filtteröidä rajapintapalveluita QGISin SQL-lauseke-toiminnolla. Toiminto löytyy samasta ikkunasta, josta WFS-tasoja voidaan lisätä kunkin palveluyhteyden osalta. Seuraavassa animaatiossa ladataan Tilastokeskuksen ylläpitämästä paikkatietopalvelusta vain vakavuuden “2” liikenneonnettomuudet vuodelta 2015 QGISiin.
+
+Lisätään Tilastokeskuksen tieliikenteen **WFS-rajapinnasta** http://geo.stat.fi/geoserver/tieliikenne/wfs vektoritaso **Tieliikenneonnettomuudet 2017**. 
+
+![](img/harjoitus_2/image5.png)
+
 Datan lataamiseksi tuotamme SQL-kyselyn, joka etsii '2'-tiedon meillä jo tiedossa olevasta sarakkeesta. Avaamme ensin **SQL-kyselyikkunan** ja muodostamme kyselyn:
 
 ![](img/harjoitus_2/image9.gif)
@@ -83,6 +83,9 @@ Sitten lisäämme tason QGISiin ja varmistamme, että SQL-kyselymme tuotti toivo
 
 ![](img/harjoitus_2/image7.gif)
 
-> Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.
+:::{.hint-box}
+**Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.**
+:::
+
 
 
