--- a/src/05_harjoitus_5.Rmd
+++ b/src/05_harjoitus_5.Rmd
@@ -39,11 +39,11 @@ Valitse **Elementin ominaisuudet -välilehti** ja muuta kartan parametrejä seur
 Huomaa, että karttatulosteen hallinnassa on mahdollisuus siirtää yksittäisiä kohteita (nimikkeitä) tai muokata kartan sijaintia.
 Kohteen ollessa valittuna, voit siirtää sitä tulosteella seuraavan työkalun avulla:
 
-![](img/harjoitus_5/image16.png) Valitse/siirrä elementtiä.
+|:-------:|:-------------------------------:|
+| ![](img/harjoitus_5/image16.png) | Valitse/siirrä elementtiä    |
+| ![](img/harjoitus_5/image21.png) | Siirrä elementin sisältöä (esimerkiksi kartan sisältöä)  |
+| ![](img/harjoitus_5/image19.png) | Zoomaa taiton näkymässä   |
 
-![](img/harjoitus_5/image21.png) Siirrä elementin sisältöä (esimerkiksi kartan sisältöä).
-
-![](img/harjoitus_5/image19.png) Zoomaa taiton näkymässä.
 
 QGISin avulla voit muokata karttatulosteesi ulkoasua. Otsikko tai muu teksti voidaan lisätä **Lisää uusi nimiö** -työkalulla: 
 ![](img/harjoitus_5/image7.png)
@@ -60,8 +60,7 @@ Tekstiä voi muokata tekstinkäsittelyohjelmista tutuilla työkaluilla:
 ![](img/harjoitus_5/image25.png)
 
 Voit myös muokata selitteen ominaisuuksia. Huomaa, että sinun on poistettava kohdan **Päivitä automaattisesti** rasti.
-Pohjoisnuolen lisääminen tapahtuu lisäämällä kuva tällä työkalulla (vasemmasta palkista): 
-![](img/harjoitus_5/image14.png)
+Pohjoisnuolen lisääminen tapahtuu lisäämällä kuva tällä työkalulla (vasemmasta palkista): ![](img/harjoitus_5/image14.png)
 
 Valitse sen jälkeen **Elementin ominaisuudet -ikkunasta** mieleisesi pohjoisnuoli-kuva (selaa sisältöä alaspäin, jos et heti näe nuolia).
 
@@ -71,8 +70,7 @@ Lopputulos voi olla esimerkiksi seuraavanlainen:
 
 ![](img/harjoitus_5/image10.png)
 
-Halutessasi voit tallentaa käyttämäsi tulostemallin (layout englanniksi) ja hyödyntää sitä jatkossa seuraavien karttatulosteiden tekemiseen. Voit esimerkiksi muotoilla kollegoidesi käyttöön karttatulostemallin organisaatiollesi (logot, värit, tekstin paikka, jne.). Tämä onnistuu **Tallenna malliksi -työkalulla**: 
-![](img/harjoitus_5/image26.png)
+Halutessasi voit tallentaa käyttämäsi tulostemallin (layout englanniksi) ja hyödyntää sitä jatkossa seuraavien karttatulosteiden tekemiseen. Voit esimerkiksi muotoilla kollegoidesi käyttöön karttatulostemallin organisaatiollesi (logot, värit, tekstin paikka, jne.). Tämä onnistuu **Tallenna malliksi -työkalulla**: ![](img/harjoitus_5/image26.png)
 
 Lopputuloksen voit tulostaa tiedostoksi (kuvaksi tai pdf:ksi) tai tulostimeen. 
 
@@ -80,28 +78,32 @@ Lopputuloksen voit tulostaa tiedostoksi (kuvaksi tai pdf:ksi) tai tulostimeen.
 
 Sopiva resoluutio karttatulosteellesi riippuu kartan käyttötarkoituksesta, mutta oletusarvoinen 300 dpi tallentaa resoluutioltaan hyvinkin tarkkoja kuvia. Voit valita arvoksi vaikkapa 200 dpi. 
 
-> Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.
+:::{.hint-box\
+**Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.**
+:::
 
 ## Lisätehtävä: kartta-atlas
 QGIS mahdollistaa myös kartta-atlaksen tekemisen. Kartta-atlas on ns. karttakirja, jonka avulla voidaan tuottaa automatisoidusti paljon karttoja samasta teemasta. Seuraavassa esimerkissä tuotamme kartta-atlaksen Helsingin postinumeroalueista tutkien niitä väestön jakautumisen näkökulmasta. Tavoitteenamme on tuottaa 173 karttaa, jotka kattavat kaikki pääkaupunkiseudun postinumeroalueet.
-- Lataa ensiksi postinumeroalueet paikkatietoaineiston avoindata.fi-sivustolta: 
+
+* Lataa ensiksi postinumeroalueet paikkatietoaineiston avoindata.fi-sivustolta: 
   https://www.avoindata.fi/data/fi/dataset/paakaupunkiseudun-postinumeroalueet
   Lataa aineisto haluamassasi muodossa kurssikansioosi ja lisää se oppimallasi tavalla QGIS-projektiin.
   
 TAI
-- **Lisää .../kurssihakemisto/HSY/Postinumeroalueet_2019.gpkg** eli HSY:n postinumeroaineisto QGIS-projektiisi. Psst! Tämä aineisto on tallennettu koordinaattijärjestelmässä EPSG: 3067! 
+*- **Lisää .../kurssihakemisto/HSY/Postinumeroalueet_2019.gpkg** eli HSY:n postinumeroaineisto QGIS-projektiisi. Psst! Tämä aineisto on tallennettu koordinaattijärjestelmässä EPSG: 3067! 
 
 Nyt projektissa on tasoina ainakin väestöruutuaineisto ja postinumeroalueet. Voit myös lisätä muita haluamiasi tasoja projektiin (esimerkiksi tieviivat). 
 Avaa uusi tuloste ja aseta sen sommittelu haluamaasi kokoon (esimerkiksi A5). 
 
 Lisää tulosteelle kartta, johon piirtyvät karttaikkunassa näkyvät projektin tasot. Lisää otsikko, selite ja muut karttatulosteen graafiset tai kartografiset elementit (kuten logo tai pohjoisnuoli) totuttuun tapaan. Lähennä karttanäkymä n. yhden postinumeroalueen laajuiseksi (esim. 1:25 000), sillä lopputuloksessa kartta-atlaksen karttalehdet automaattisesti kohdentuvat postinumeroialueiden kokoon.
 
+
 Sitten aloitetaan kartta-atlaksen tuottaminen. Aktivoimme tulosteelle kartta-atlastilan oikean ominaisuuspalkin Atlaksen luonti-välilehdestä kuvan osoittamalla tavalla. Karttalehtijakotasoksi valitsemme tason, jonka alueisiin kartta-atlas perustuu. Tässä tapauksessa se on postinumeroalueet-taso. 
 
 ![](img/harjoitus_5/image18.png)
 
 Varmista, että karttakomponentti on valittuna, valitse se **Valitse/Siirrä elementti -työkalulla** vasemmasta työpalkista ja klikkaamalla kartta aktiiviseksi:
-![](img/harjoitus_5/image3.png)
+![](img/harjoitus_5/image16.png))
 
 Muokkaamme kartta-atlasasetuksia oikean puolen sivupalkissa **Elementin ominaisuudet → Atlas ohjaa tätä**.
 
@@ -113,7 +115,7 @@ Tämän jälkeen voimme esikatsella kartta-atlastamme **Esikatsele Atlasta -työ
 
 Esikatselun avulla voit vilkaista, miltä kartta-atlas näyttäisi tulostaessa. Käytä nuolia esikatselutyöpalkista Huomaa, että voit tehdä samanaikaisesti muutoksia karttatulosteen tyyliasetuksiin tai vaikkapa tason luokitteluväreihin.
 Jos haluat voit lisätä tulosteeseen myös yleiskatsauskarttanäkymän, joka helpottaa kohteen sijainnin määrittämistä kartta-atlaksessa. Yleiskatsaus eli indeksikartta ilmaisee, millä alueella kartalla liikutaan.
-Lisää sitä varten tulosteeseen pienempi karttaikkuna, jota käytetään indeksikarttana. Valitse **yleiskatsauskartan Elementin omaisuudet -paneelista Yleiskatsaukset** ja määritä asetukset kuvan mukaisesti:
+Lisää sitä varten tulosteeseen pienempi karttaikkuna, jota käytetään indeksikarttana. Valitse uuden karttaelementin **Elementin omaisuudet -paneelista Yleiskatsaukset** ja määritä asetukset kuvan mukaisesti:
 
 ![](img/harjoitus_5/image12.png)
 
@@ -122,7 +124,7 @@ Kun olet valmis, voit tulostaa kartta-atlaksen **Vie atlas kuvina -työkalulla**
 
 ![](img/harjoitus_5/image11.png)
 
-Voit tulostaa atlaksen yksittäisinä kuvina tai yhteen tiedostoon PDF-formaatissa. Yhteen tiedostoon tallentaminen onnistuu aktivoimalla **Yhden tiedoston vienti jos mahdollista -asetuksen Atlaksen luonti** -välilehdessä:
+Voit tulostaa atlaksen yksittäisinä kuvina tai yhteen tiedostoon PDF-formaatissa. Yhteen tiedostoon tallentaminen onnistuu aktivoimalla **Yhden tiedoston vienti jos mahdollista** -asetuksen Atlaksen luonti -välilehdessä:
 
 ![](img/harjoitus_5/image23.png)
 
