--- a/src/08_harjoitus_8.Rmd
+++ b/src/08_harjoitus_8.Rmd
@@ -1,27 +1,26 @@
-#Harjoitus 8: QGISin lisäosat
+# Harjoitus 8: QGISin lisäosat
 
-##Harjoituksen sisältö
+## Harjoituksen sisältö
 
 Harjoituksessa asennetaan muutama QGIS-lisäosa.
 
-##Harjoituksen tavoite
+## Harjoituksen tavoite
 
 Koulutettava oppii asentamaan QGIS-lisäosia ja ymmärtää niiden toimintaperiaatteet.
 
-
-##Valmistautuminen
+## Valmistautuminen
 
 Käynnistä QGIS-ohjelmisto. Avaa uusi QGIS-projekti ja tallenna se nimellä  (**Projekti → Tallenna nimellä…) “QGIS_harjoitus_8”**.
 Lataa projektiin seuraavat aineistot:
 **.../kurssihakemisto/MML/Korkeusmalli_2m/L4133B.asc (korkeusmalli)** ja
 **.../kurssihakemisto/HSY/Vaestotietoruudukko_2019.gpkg**
 
-##Lisäosien hallinta
+## Lisäosien hallinta
 
 Lisäosia  lisätään käyttöön päävalikosta **Lisäosat → Hallitse ja asenna lisäosia…** -valikon kautta.
 Valitse **Asennettu**-välilehti ja saat esille kaikki asennetut lisäosat. Huomaa, että suurinta osaa niistä ei ole aktivoitu. Lisäosien aktivointi lisää erilaisia valikkoja ja paneeleja QGISin käyttöliittymään. Siksi on hyödyllistä piilottaa ne joita ei käytetä.
 
-##QuickMapServices
+## QuickMapServices
 
 **QuickMapServices (QMS) -lisäosan** kautta saat QGISin karttaprojektiin erilaisia taustakarttoja verkosta, kuten OpenStreetMaps, Google Maps tai Bing Maps.
 Avaa **Lisäosat → Hallitse ja asenna lisäosia…**, valitse **Kaikki**-välilehti ja etsi quickmapservices tekstillä:
@@ -33,7 +32,7 @@ Uusi valikko tulee päävalikon **Verkko** alle. Valitse **Verkko → QuickMapSe
 
 ![](img/harjoitus_8/image4.png)
 
-##Qgis2threejs
+## Qgis2threejs
 
 Lisää vielä **Qgis2threejs**-lisäosa. Tämä lisäosa mahdollistaa nopean kolmiulotteisen visualisoinnin luomisen web-selaimelle käyttäen threejs-kirjastoa. Lisäosan valikko tulee myös **Verkko**-valikkoon. Avaa **Qgis2threejs Exporter** ja valitse **DEM Layer -valikosta** korkeusmalliaineisto (tässä L4133B). Valitse sen jälkeen **Polygon**-kohdan alta väestötietoruudukkoaineisto ja tuplaklikkaa sitä avataksesi asetukset. Aseta Z-coordinate kohdan **Mode-asetukseksi Relative to “L4133B” layer** ja **Height-kentän** arvoksi asukkaita-kentän arvo.
 
@@ -41,7 +40,7 @@ Lisää vielä **Qgis2threejs**-lisäosa. Tämä lisäosa mahdollistaa nopean ko
 
 Voit tarkastella visualisointia esikatseluikkunassa tai exportoida sen html-tiedostoksi jolloin sen voi avata selaimella.
 
-##Qgis2web
+## Qgis2web
 
 Qgis2web -lisäosa on helppokäyttöinen lisäosa verkkokartan luomista varten. Sillä voi tuottaa verkkokarttoja hyödyntäen **Leaflet**- tai **OpenLayers**-kirjastoja. Qgis2web on hyödyllinen apuväline näiden kirjastojen opetteluun ja verkkokarttajulkaisujen tekemiseen.
 Avaa Qgis2web valikosta **Verkko → Qgis2web → Create web map**. Valitse väestötietoruudukko-aineiston kentille **Popup fields** -kohdan alta **Inline label**, ja klikkaa **Update preview**. Kun kartta on päivittynyt, klikkaa ruudukkoa.
@@ -53,6 +52,10 @@ Vaihda **Appearance**-välilehdelle ja muuta asetukset kuvan mukaisesti:
 ![](img/harjoitus_8/image6.png)
 
 Paina lopulta **Export** tallentaaksesi kartan HTML-tiedostoon. Tiedosto aukeaa automaattisesti selaimelle. Kokeile verkkokartassasi etsiä osoitteita ja käyttää mittaustyökalua.
-Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.
+
+:::{.note-box}
+**Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.** 
+:::
+
 
 
