--- a/src/03_harjoitus_3.Rmd
+++ b/src/03_harjoitus_3.Rmd
@@ -30,14 +30,14 @@ Muut paikkatietoaineistojen visualisoinnin työkalut saa käyttöön samalla tav
 Lisätään nyt toinen vektorimuotoinen aineisto QGIS-projektiimme. Käytä samaa työkalua kuin edellisessä harjoituksessa: avaa siis uusi taso painamalla **Lisää vektoritaso** -näppäintä. Etsi **.../kurssihakemisto/NaturalEarth/ne_10m_populated_places/** hakemistosta aineisto nimellä **ne_10m_populated_places_suomi.shp**. Tämä aineisto sisältää NaturalEarth-kaupunkiaineiston Suomesta.
 Avaa pistetason kuvaustekniikkaikkuna samalla tavalla kuin äsken viivatason yhteydessä. Huomaa erot viiva- ja pistetason kuvaustekniikan määrittelyissä:
 
-![](img/harjoitus_3/image7.png){width:50%}
+![](img/harjoitus_3/image7.png){width=50%}
 
 Vaihda pisteen **Väri** ja **Koko** ja paina taas **Käytä**.** Pikanäppäimellä F7** saat avatuksi **Tason tyylit -ikkunan**, joka on jatkuvasti avoinna karttaikkunan oikeassa laidassa. Tällöin voit helposti vaihtaa kaikkien tasojen kuvaustekniikkaa ja näet heti, miltä uusi tyyli näyttää. Vaihda symbolia ja kokeile myös, miten **Kierto** vaikuttaa symbolin näkymiseen.
 
 
 Toistetaan samat asiat vielä monikulmiotason kanssa. Avaa nyt toinen NaturalEarth-aineisto, jossa on Suomen alue erotettuna. Etsi **ne_10m_admin_0_countries**-hakemistosta **ne_10m_admin_0_countries_suomi.shp**
 
-![](img/harjoitus_3/image1.png){width:50%}
+![](img/harjoitus_3/image1.png){width=50%}
 
 ja lisää aineisto projektiin. Avaa sen kuvaustekniikkaikkuna ja huomaa erot verrattuna piste- ja viiva-aineistojen ominaisuuksiin.
 Muokkaa tason väriä **Väri-kohdasta** ja valitse tasolle jokin symboli haluamastasi kirjastosta. Voit myös kokeilla eri **Peittävyys-arvoja**. Paina Käytä ja kun olet testannut tarpeeksi, paina **OK**.
@@ -57,11 +57,11 @@ Valittuasi sopivan värin, paina **OK**.
 Paina sen jälkeen **Properties-ikkunasta Käytä**. Näin **Properties-ikkuna** pysyy auki ja voit katsoa tyylien muutoksia karttanäkymässä.
 Kun olet valinnut haluamasi värin, paina **OK**.
 
-![](img/harjoitus_3/image5.png){width:70%}
+![](img/harjoitus_3/image5.png){width=70%}
 
 Avaa uudelleen tason **Properties-ikkuna**. **Kuvaustekniikka-asetuksista**, valitse ensin **Simple fill** oheisen kuvan mukaisesti:
 
-![](img/harjoitus_3/image9.png){width:70%}
+![](img/harjoitus_3/image9.png){width=70%}
 
 Sen jälkeen valitse reunaviiva katkoviivaksi kohdasta **Piirron tyyli**. Viivan paksuudeksi voit määritellä 0,8 millimetriä.
 Lopuksi voit vielä määritellä **Tason renderöinti -kohdasta** (valikko aukeaa pientä nuolta klikkaamalla) **Peittävyys-kohtaan** arvoksi 70%.
@@ -72,7 +72,7 @@ Tutustutaan nyt rasteriaineistoihin. Avaa uusi, tyhjä QGIS-projekti ja lisää 
 
 Etsi datahakemistosta **Yleiskarttarasteri_1milj.png**, joka on **…/kurssihakemisto/MML/**-kansiossa. QGIS ilmoittaa, että aineiston koordinaattijärjestelmä on tuntematon, ja olettaa koordinaattijärjestelmäksi WGS84. Aseta rasteriaineiston koordinaattijärjestelmäksi **ETRS89- / ETRS-TM35FIN**. Klikkaa tason nimeä hiiren oikealla napilla, valitse **Properties** ja **Lähde-välilehti**. Etsi tasokoordinaattijärjestelmä (projisoidut koordinaattijärjestelmät) **EPSG:3067 - ETRS89- / ETRS-TM35FIN** ja paina **OK**:
 
-![](img/harjoitus_3/image11.png){width:70%}
+![](img/harjoitus_3/image11.png){width=70%}
 
 Tämä rasteriaineisto on MML:n tuottama taustakartta, johon on sisällytetty Suomen tiet, kaupungit ja muita yleiskartan tarkoitusta ajavia aineistoja. Käytetty visualisointi on tuttu paperikartoilta.
 Avaa nyt rasteritason **Kuvaustekniikka-ikkuna** samalla tavalla kuin vektoriaineistojen kanssa. Huomaa erot työkaluissa ja ominaisuuksissa rasteri- ja vektoriaineistojen välillä.
