--- a/src/07_harjoitus_7.Rmd
+++ b/src/07_harjoitus_7.Rmd
@@ -12,7 +12,9 @@ Koulutettava oppii käyttämään eri aineistoille tarkoitettuja paikkatietoanal
 
 Luo uusi QGIS-projekti ja tallenna se nimellä (**Projekti → Tallenna nimellä…) “QGIS_harjoitus_7”**. 
 Lisää projektiin seuraavat tasot:
-* **.../kurssihakemisto/Tilastokeskus/kunnat2017/kunta1000k_2017.gpkg**, jossa on Suomen kuntarajat 
+
+* **.../kurssihakemisto/Tilastokeskus/kunnat2017/kunta1000k_2017.gpkg**
+ 
 * **.../kurssihakemisto/MML/YK_1M/TieViiva.shp**
 
 Voit asettaa kunnat-monikulmion täytevärin pois ja saada siten tieviiva-aineiston paremmin näkyviin:
@@ -23,7 +25,7 @@ Karttanäkymä näyttää nyt kunkin väriasetuksia lukuunottamatta tältä:
 
 ![](img/harjoitus_7/image4.png)
 
-Voit tarkistaa/muokata projektisi koordinaattijärjestelmän asetuksia **Projekti → Properties → Koordinaattijärjestelmä** -välilehdessä tai klikkaamalla oikeasta alareunasta:
+Voit tarkistaa/muokata projektisi koordinaattijärjestelmän asetuksia **Projekti → Ominaisuudet → Koordinaattijärjestelmä** -välilehdessä tai klikkaamalla oikeasta alareunasta:
 
 ![](img/harjoitus_7/image2.png)
 
@@ -55,7 +57,7 @@ Seuraavaksi lähdemme käsittelemään aineistoja **Vektori**-ylämenusta, josta
 
 ![](img/harjoitus_7/image10.png)
 
-Käynnistä **Ristiinleikkaus(intersection...)**-työkalu **Geoprosessointi**-valikosta. Määrittele leikattavaksi tasoksi tiestöaineisto ja leikkaavaksi tasoksi kuntaraja-aineisto:
+Käynnistä **Ristiinleikkaus (intersection...)**-työkalu **Geoprosessointi**-valikosta. Määrittele leikattavaksi tasoksi tiestöaineisto ja leikkaavaksi tasoksi kuntaraja-aineisto:
 
 ![](img/harjoitus_7/image1.png)
 
