--- a/src/01_harjoitus_1.Rmd
+++ b/src/01_harjoitus_1.Rmd
@@ -75,7 +75,8 @@ Työkalupalkin toiminnot (käyttöliittymän yläosassa):
 ![](img/harjoitus_1/image3.png)
 
 Paikanna edellä näkyneestä työkalurivistä seuraavat työkalut ja tunnista niiden tarkoitukset:
- 
+
+<!--Format tables --> 
 | Zoomaa täydeksi       | ![](img/harjoitus_1/image5.png) |
 |:---------------------:|:-------------------------------:|
 | Zoomaa tasoon         | ![](img/harjoitus_1/image6.png) |
