--- a/src/01_harjoitus_1.Rmd
+++ b/src/01_harjoitus_1.Rmd
@@ -77,8 +77,10 @@ Työkalupalkin toiminnot (käyttöliittymän yläosassa):
 Paikanna edellä näkyneestä työkalurivistä seuraavat työkalut ja tunnista niiden tarkoitukset:
 
 <!--Format tables --> 
-| Zoomaa täydeksi       | ![](img/harjoitus_1/image5.png) |
+<!--| Zoomaa täydeksi       | ![](img/harjoitus_1/image5.png) |-->
+|                       |                                 |
 |:---------------------:|:-------------------------------:|
+| Zoomaa täydeksi       | ![](img/harjoitus_1/image5.png)
 | Zoomaa tasoon         | ![](img/harjoitus_1/image6.png) |
 | Näytä kohteen tiedot  | ![](img/harjoitus_1/image1.png) | 
 | Avaa attribuuttitaulu | ![](img/harjoitus_1/image2.png) | 
